--- a/servicio-canto.html
+++ b/servicio-canto.html
@@ -165,7 +165,7 @@
 
         <div class="video-wrap">
           <!-- Opción 1: video local (MP4) -->
-          <video controls playsinline preload="metadata" poster="images/canto/video-poster.jpg">
+          <video controls loop autoplay playsinline preload="metadata" poster="images/canto/video-poster.jpg">
             <source src="videos/setup-luces.mp4" type="video/mp4">
             Tu navegador no soporta video HTML5.
           </video>
@@ -191,5 +191,6 @@
 
 </body>
 </html>
+
 
 
