--- a/servicio-adorno.html
+++ b/servicio-adorno.html
@@ -197,6 +197,150 @@
           </div>
         </div>
       </div>
+
+            <!-- 04 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_04.jpeg" title="Flores protagonistas">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_04.jpeg" alt="Arreglo 04">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Flores protagonistas</strong><br>
+            <small>Un toque wow instantáneo</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 05 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_05.jpeg" title="Romántico y elegante">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_05.jpeg" alt="Arreglo 05">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Romántico y elegante</strong><br>
+            <small>Perfecto para fotos bonitas</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 06 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_06.jpeg" title="Clásico con contraste">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_06.jpeg" alt="Arreglo 06">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Clásico con contraste</strong><br>
+            <small>Detalle fino que resalta</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 07 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_07.jpeg" title="Luz cálida y alegre">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_07.jpeg" alt="Arreglo 07">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Luz cálida y alegre</strong><br>
+            <small>Se ve increíble de noche</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 08 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_08.jpeg" title="Glowy & romántico">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_08.jpeg" alt="Arreglo 08">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Glowy & romántico</strong><br>
+            <small>Un fondo que enamora</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 09 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_09.jpeg" title="Elegancia con brillo">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_09.jpeg" alt="Arreglo 09">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Elegancia con brillo</strong><br>
+            <small>Ideal para mesa principal</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 10 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_10.jpeg" title="Detalles con corazón">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_10.jpeg" alt="Arreglo 10">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Detalles con corazón</strong><br>
+            <small>Perfecto para celebraciones</small>
+          </div>
+        </div>
+      </div>
+
+      <!-- 11 -->
+      <div class="col-12 col-sm-6 col-lg-4 mb-4">
+        <div class="gallery-card">
+          <a class="venobox" data-gall="arreglos" href="images/arreglo/arreglo_11.jpeg" title="Dorado premium">
+            <div class="gallery-thumb">
+              <img src="images/arreglo/arreglo_11.jpeg" alt="Arreglo 11">
+              <div class="gallery-overlay">
+                <span class="gallery-icon"><i class="ti-zoom-in"></i></span>
+              </div>
+            </div>
+          </a>
+          <div class="gallery-caption">
+            <strong>Dorado premium</strong><br>
+            <small>Impacto total en fotos</small>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
@@ -209,7 +353,6 @@
 <script src="plugins/slick/slick.min.js"></script>
 <script src="plugins/venobox/venobox.min.js"></script>
 <script src="plugins/counto/apear.js"></script>
-<script src="plugins/counto/counTo.js"></script>
 <script src="plugins/counto/counTo.js"></script>
 <script src="plugins/card-slider/js/card-slider-min.js"></script>
 <script src="js/script.js"></script>
